data/derived/sp14/progs/unify/prog2369.ml.out
Characters 94-106:
  let f a x = if a = "a" then a ^ x  ^ sep in
                              ^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         unit
